# kernelvex

./: Cargo.toml  TRACKING_WHEEL_IMPROVEMENTS.md  VECTOR_IMPLEMENTATIONS.md  mkdocs.yml
examples/: README.md  basic_tracking.rs  example.rs  odometry_example.rs  pto.rs  tracking_wheel_usage.rs
src/: angles.rs  builder.rs  differential.rs  length.rs  lib.rs  model.rs  motorgroup.rs  odom.rs  omniwheel.rs  pid.rs  pose.rs  sensors.rs  si.rs  solenoidgroup.rs  utils.rs  wheel.rs
src/control/: feedforward.rs  mod.rs  pid.rs  purepursuit.rs  ramsete.rs
src/dt/: differential.rs  mod.rs  model.rs  motorgroup.rs
src/motion/: mod.rs  profile.rs  trajectory.rs
src/odom/: chassis.rs  mod.rs  pose.rs  sensors.rs  tolerances.rs  wheel.rs
src/util/: controller.rs  logger.rs  mod.rs  si.rs  solenoidgroup.rs  utils.rs
tests/: motorgroup.rs  pid.rs  pose.rs  profile.rs  purepursuit.rs  ramsete.rs  si.rs  trajectory.rs  vector2.rs
