[package]
name = "kernelvex"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "VEX Controls library"
repository = "https://github.com/bytepacket/kernelvex/"
homepage = "https://www.2381.ca"

[dependencies]
libm = "0.2.15"
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }
vexide-devices = "0.8.0"
typenum = { version = "1.19.0", default-features = false }
humantime = "2.3.0"
thread-id = "5.1.0"
