[package]
name = "kernelvex"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "VEX Controls library"
repository = "https://github.com/bytepacket/kernelvex/"
homepage = "https://www.2381.ca"

[dependencies]
libm = "0.2.16"
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }
vexide-devices = { version = "0.8.0", default-features = false }
vexide-async = { version = "0.2.0", default-features = false, features = ["sync"] }
typenum = { version = "1.19.0", default-features = false }
humantime = { version = "2.3.0", default-features = false }
thread-id = { version = "5.1.0", default-features = false }
heapless = { version = "0.9.2", default-features = false }

